objects/Criterio_nacional_de_cota__c.object
<CustomObject>
    <fields>
        <fullName>Bandeira__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bandeira</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consumo_de_cota__c</fullName>
        <label>Consumo de cota</label>
        <summarizedField>Cota_nacional__c.Consumo_de_cota__c</summarizedField>
        <summaryForeignKey>Cota_nacional__c.Criterio_nacional_de_cota__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cota__c</fullName>
        <label>Cota</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU Produto</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Critérios nacionais de cota</relationshipLabel>
        <relationshipName>LAT_Crit_rios_nacionais_de_cota</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nome_do_SKU__c</fullName>
        <formula>SKU__r.Nome_do_produto__c</formula>
        <label>Nome do SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SKU_Produto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU Produto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Critérios nacionais de cota</relationshipLabel>
        <relationshipName>Crit_rios_nacionais_de_cota</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SKU</label>
        <referenceTo>SKU__c</referenceTo>
        <relationshipLabel>Critérios nacionais de cota</relationshipLabel>
        <relationshipName>Criterios_nacionais_de_cota</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcanal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subcanal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_de_cotas__c</fullName>
        <description>Indica o total de cotas dependentes que já foram criadas para este produto.</description>
        <inlineHelpText>Indica o total de cotas dependentes que já foram criadas para este produto.</inlineHelpText>
        <label>Total de cotas Nacionais</label>
        <summarizedField>Cota_nacional__c.Cota__c</summarizedField>
        <summaryForeignKey>Cota_nacional__c.Criterio_nacional_de_cota__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Critério nacional de cota</label>
    <nameField>
        <displayFormat>Critério Nacional {0000}</displayFormat>
        <label>Número do critério Nacional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Critérios nacionais de cota</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Valida_campos_minimos</fullName>
        <active>true</active>
        <errorConditionFormula>and(not( Regional__c), not(Canal__c),  not(Subcanal__c ), not(Bandeira__c ))</errorConditionFormula>
        <errorMessage>É necessário selecionar ao menos um critério de validação.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_total_de_cotas</fullName>
        <active>true</active>
        <errorConditionFormula>Total_de_cotas__c &gt; Cota__c</errorConditionFormula>
        <errorMessage>Você excedeu a quantidade de cotas disponíveis</errorMessage>
    </validationRules>
</CustomObject>